--- a/templates/task/create.html.twig
+++ b/templates/task/create.html.twig
@@ -5,9 +5,9 @@
         {{ form_start(form, {'action' : path('task_create')}) }}
             {{ form_widget(form) }}
 
-            <button type="submit" class="btn btn-success pull-right">Ajouter</button>
+            <button type="submit" class="btn btn-success float-end mt-3">Ajouter</button>
         {{ form_end(form) }}
 
-        <a href="{{ path('task_list') }}" class="btn btn-primary">Retour à la liste des tâches</a>
+        <a href="{{ path('task_list') }}" class="btn btn-primary mt-3">Retour à la liste des tâches</a>
     </div>
 {% endblock %}
