--- a/templates/task/edit.html.twig
+++ b/templates/task/edit.html.twig
@@ -5,7 +5,9 @@
         {{ form_start(form, {'action' : path('task_edit', { 'id' : task.id })}) }}
             {{ form_widget(form) }}
 
-            <button type="submit" class="btn btn-success pull-right">Modifier</button>
+            <button type="submit" class="btn btn-success float-end mt-3">Modifier</button>
         {{ form_end(form) }}
+
+        <a href="{{ path('task_list') }}" class="btn btn-primary mt-3">Retour à la liste des tâches</a>
     </div>
 {% endblock %}
