--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -3,23 +3,20 @@
 {% block header_img %}<img class="slide-image" src="{{ asset('img/todolist_content.jpg') }}" alt="todo list">{% endblock %}
 
 {% block body %}
-    <a href="{{ path('task_create') }}" class="btn btn-info">Créer une tâche</a>
+    <a href="{{ path('task_create') }}" class="btn btn-info mb-2">Créer une tâche</a>
     <div class="row">
         {% for task in tasks %}
         <div class="col-sm-4 col-lg-4 col-md-4">
-            <div class="thumbnail">
+            <div class="thumbnail mt-3">
                 <div class="caption">
-                    <h4 class="pull-right">
-                        {% if task.isDone %}<span class="glyphicon glyphicon-ok"></span>{% else %}<span class="glyphicon glyphicon-remove"></span>{% endif %}
-                    </h4>
-                    <h4><a href="{{ path('task_edit', {'id' : task.id }) }}">{{ task.title }}</a></h4>
-                    <p>Utilisateur: {% if task.author == null %}anonyme{% else %}{{ task.author.username }}{% endif %}</p>
+                    <h4><a href="{{ path('task_edit', {'id' : task.id }) }}">{{ task.title }}  {% if task.isDone %}<i class="fas fa-check"></i>{% else %}<i class="fas fa-times"></i>{% endif %}</a></h4>
+                    <p><strong>Utilisateur: </strong>{% if task.author == null %}Anonyme{% else %}{{ task.author.username }}{% endif %}</p>
                     <p>{{ task.content }}</p>
                 </div>
                 <div>
                     <form action="{{ path('task_toggle', {'id' : task.id }) }}">
                         {% if app.user == task.author %}
-                        <button class="btn btn-success btn-sm pull-right">
+                        <button class="btn btn-success btn-sm">
                             {% if not task.isDone %}Marquer comme faite{% else %}Marquer non terminée{% endif %}
                         </button>
                         {% endif %}
@@ -27,7 +24,7 @@
                     {% if (is_granted('ROLE_ADMIN') and task.author is null)
                         or (app.user == task.author) %}
                     <form action="{{ path('task_delete', {'id' : task.id }) }}">
-                        <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
+                        <button class="btn btn-danger btn-sm mt-2">Supprimer</button>
                     </form>
                     {% endif %}
                 </div>
@@ -35,7 +32,7 @@
         </div>
         {% else %}
             <div class="alert alert-warning" role="alert">
-                Il n'y a pas encore de tâche enregistrée. <a href="{{ path('task_create') }}" class="btn btn-warning pull-right">Créer une tâche</a>
+                Il n'y a pas encore de tâche enregistrée. <a href="{{ path('task_create') }}" class="btn btn-warning float-end">Créer une tâche</a>
             </div>
         {% endfor %}
     </div>
