--- a/templates/user/create.html.twig
+++ b/templates/user/create.html.twig
@@ -8,7 +8,7 @@
         {{ form_start(form, {'action' : path('user_create')}) }}
             {{ form_widget(form) }}
 
-            <button type="submit" class="btn btn-success pull-right">Ajouter</button>
+            <button type="submit" class="btn btn-success float-end mt-3">Ajouter</button>
         {{ form_end(form) }}
     </div>
 {% endblock %}
